[package]
name = "jinix"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/jaxlo/Jinix"
authors = ["Jackson Lohman <j@jaxlo.net>"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



# Disable Unwinding: https://os.phil-opp.com/freestanding-rust-binary/#disabling-unwinding
# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
